# alethe-agents-2

./: .env.example  .gitignore  AGENTS.md  AGENTS_TRANSFER.md  CLAUDE.md  NOTICE  PLANEJAMENTO_REESTRUTURACAO.md  README.md  TRADEMARK.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: file-guard.cjs  verify-build.cjs
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  contributors.yml  discord-notify.yml  release.yml
.husky/: pre-commit
docs/: BRAND.md  FEATURES.md  JOURNEY-ghostty-native-macos.md  OVERVIEW.md  PLAN-ghostty-native-macos.md  PROJECT_STATUS.md  TESTING-ghostty.md  walkthrough.md
scripts/: capture-window.sh  release-publish.mjs  release.mjs  smoke-ghostty.sh
src/: .claude.rules.md  App.module.css  App.tsx  main.tsx
src-tauri/: .claude.rules.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/ghostty_shim/: ghostty_shim.h  ghostty_shim.m
src-tauri/icons/: icon.icns
src-tauri/src/: activity_stats.rs  agent_cost.rs  agent_events.rs  agent_library.rs  backup.rs  claude_sessions.rs  claude_usage.rs  cli_resolver.rs  codex_sessions.rs  codex_usage.rs  context_decisions.rs  context_engine.rs  context_objectives.rs  crash_watch.rs  diagnostics.rs  discord_presence.rs  economy_agents.rs  filesystem.rs  ghostty_bridge.rs  ghostty_ffi.rs  git_control.rs  github_sync.rs  lib.rs  logging.rs  main.rs  opencode_models.rs  paths.rs  projects.rs  pty.rs  session_watcher.rs  spotify.rs  stats.rs  telemetry_db.rs  telemetry_proxy.rs  workflow_engine.rs  workflow_git.rs  workflow_local.rs  worktree.rs
src/assets/: icons.ts
src/components/AgentCanvasPOC/: AgentCanvasPOC.module.css  AgentModal.tsx  UsageDropdown.tsx  index.tsx
src/components/AgentTerminalPanel/: AgentTerminalPanel.module.css  ChatTab.module.css  ChatTab.tsx  index.tsx
src/components/EmptyState/: EmptyState.module.css  EmptyState.tsx
src/components/ErrorBoundary/: ErrorBoundary.module.css  index.tsx
src/components/FileEditor/: EditorPane.module.css  EditorPane.tsx  EditorTabs.module.css  EditorTabs.tsx  FileEditor.module.css  index.tsx
src/components/FocusOverlay/: FocusOverlay.module.css  index.tsx
src/components/GhosttySurface/: index.tsx
src/components/HomeView/: ActivityGraph.tsx  HomeView.module.css  NowPlayingWidget.tsx  TimeAnalytics.tsx  UsageStrip.tsx  index.tsx
src/components/LinkViewerOverlay/: LinkViewerOverlay.module.css  index.tsx
src/components/MainMenu/: MainMenu.module.css  index.tsx
src/components/MarkdownPane/: MarkdownPane.module.css  MarkdownRenderer.tsx  index.tsx
src/components/ProjectSidebar/: ContextMenu.module.css  ContextMenu.tsx  FileExplorer.module.css  FileExplorer.tsx  GitControl.module.css  GitControl.tsx  ProjectSidebar.module.css  SettingsPanel.tsx  SidebarUpdate.module.css  SidebarUpdate.tsx  WorkflowDashboard.module.css  WorkflowDashboard.tsx  index.tsx
src/components/SidebarNowPlaying/: SidebarNowPlaying.module.css  index.tsx
src/components/SubTabsLane/: SubTabsLane.module.css  index.tsx
src/components/TaskPanel/: RejectDialog.tsx  TaskBranchModal.tsx  TaskCard.module.css  TaskCard.tsx  TaskPanel.module.css  index.tsx
src/components/TerminalPane/: TerminalPane.module.css  index.tsx
src/components/TitleBar/: TitleBar.module.css  index.tsx
src/components/TokenHud/: TokenHud.module.css  index.tsx
src/components/UserProfile/: UserProfile.module.css  index.tsx
src/components/WorkflowKanbanView/: WorkflowKanbanView.module.css  index.tsx
src/components/WorkspaceView/: PaneArea.tsx  ProjectContainer.module.css  ProjectContainer.tsx  WorkspaceView.module.css  index.tsx
src/components/XTermView/: XTermView.module.css  index.tsx  terminalInput.ts  terminalLinks.test.ts  terminalLinks.ts
src/components/icons/: AgentIcons.tsx  ModelIcons.tsx
src/components/modals/: ClaudeHistoryModal.module.css  (+40 more)
src/hooks/: useDiscordPresence.ts  useGridResize.ts  useKeybindings.ts  useNowPlaying.ts
src/lib/: activityTracker.ts  agentCompletionMonitor.ts  agentLibrary.ts  claudeActivityCache.ts  claudeUsageCache.ts  codexUsageCache.ts  costFormat.ts  dialog.ts  ghosttyCommand.test.ts  ghosttyCommand.ts  greeting.ts  gridLayout.ts  languageDetection.ts  limitResetWatch.ts  notifications.ts  platform.test.ts  platform.ts  profile.ts  resetLastSession.ts  sessionDiscovery.ts  sessionLaunch.ts  sessionResume.ts  sessionWatch.ts  spawnQueue.ts  spotify.ts  storageNamespace.ts  tauri.ts  terminalLifecycle.ts  themes.ts  types.ts  updater.ts  webRect.test.ts  webRect.ts  workspaceNavigation.ts
src/stores/: agentCanvasStore.ts  agentCostStore.ts  contextStore.ts  editorStore.ts  nodeCostStore.ts  projectsStore.ts  terminalsStore.ts  uiStore.ts  workflowStore.ts
src/styles/: reset.css  theme.css
tests/: workspaceNavigation.test.ts
tests/XTermView/: sessionDiscovery.test.ts  sessionLaunch.test.ts  terminalInput.test.ts
(+3 files in other folders)
